[project]
name = "asa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argparse>=1.4.0",
    "colorama>=0.4.6",
    "pydantic>=2.11.7",
    "questionary>=2.1.0",
    "requests>=2.32.4",
    "tabulate>=0.9.0",
    "term-image>=0.7.2",
]

[project.scripts]
asa = "asa.cli:execute_cli"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pre-commit>=4.2.0",
    "ruff>=0.12.5",
    "types-colorama>=0.4.15.20240311",
    "types-requests>=2.32.4.20250611",
    "types-tabulate>=0.9.0.20241207",
]

[tool.ruff]
line-length = 100
